# TDA-Railways

./: .gitignore  README.md  clean.py  filer_by_coords.py  filter_funcs.py  find_correlations.py  general_all_cities.py  general_script.py  ideal_graph.py  join_topo_features.py  make_dirs.py  points2bbox.py  pyproject.toml  regional.py  utils.py
Data/: data_instructions.md
Other data/: Motorization.xlsx  commuters.xlsx  gdp.xlsx  gdp_capita.xlsx  gross_value_added.xlsx  swiss_data.csv
experiments/: GTFS_Graphs.ipynb  map_experiment.ipynb
