[tool.poetry]
name = "tda-railways"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
peartree = "^0.6.4"
matplotlib = "^3.7.1"
osmnx = "^1.6.0"
networkx = "^3.1"
numpy = "^1.23.5"
pandas = "^1.5.3"
ripser = "^0.6.4"
persim = "^0.3.1"
requests = "^2.31.0"
folium = "^0.14.0"
torch = "^2.0.1"
torch-geometric = "^2.3.1"
IPython = "^7.34.0"
ipykernel = "^6.29.5"
geopy = "^2.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
